# Python-for-Finance

./: README.md  inactive.txt  members.txt  pyproject.toml  some.ipynb  test.ipynb
