[project]
name = "python-for-finance"
version = "0.1.0"
description = ""
authors = [{ name = "rainspistols", email = "galchenko.maksym@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "setuptools (>=80.9.0,<81.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
